--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add public/rss.xml
+          git add docs/rss.xml
           git commit -m "🤖 Update RSS feed [auto]" || echo "No changes to commit"
           git push
         env:
